# dirsync.py

./: README.md  pyproject.toml
dirsync/: __main__.py
dirsync/entity/core/file/: file.py
dirsync/entity/core/file/local/: localfile.py
dirsync/entity/core/repository/: repository.py  repositoryfactory.py
dirsync/entity/core/repository/local/: localdirrepo.py
dirsync/entity/infra/: config.py  exceptions.py
dirsync/infra/: bootstrap.py  execute.py
dirsync/infra/interface/: cli.py
dirsync/infra/ui/: cli.py
