[project]
name = "dirsync.py"
description = " A Python tool to maintain an up-to-date local replica of a directory. "
version = "0.1.0"
authors = [
    { name = "Theodoros Plessas" }
]
readme = "README.md"
requires-python = ">=3.11"

# See https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Archiving :: Mirroring",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/tplessas/dirsync.py"
"Bug Tracker" = "https://github.com/tplessas/dirsync.py/issues"